--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     implementation "com.google.android.material:material:1.0.0"
+
+
+
+    implementation 'com.github.nkzawa:socket.io-client:0.3.0'
 }
